--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                   </div>
                   <div class="w3-container">
                      <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-blue"></i> Docter of Philosophy (PhD) </p>
-                     <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-blue"></i> Georgia Institute of Technology, Atlanta, USA</p>
+                     <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-blue"></i> Georgia Institute of Technology, USA</p>
                      <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-blue"></i>asen74@gatech.edu</p>
                      <p><i class="fa fa-linkedin-square fa-fw w3-margin-right w3-large w3-text-blue"></i><a href="https://www.linkedin.com/in/anuvabsen/">LinkedIn</a></p>
                      <p><i class="fa fa-graduation-cap fa-fw w3-margin-right w3-large w3-text-blue"></i> <a href="https://scholar.google.com/citations?user=aQkZOqQAAAAJ&hl=en">Google Scholar Publications</a></p>
@@ -294,7 +294,7 @@
      I am very active on most socials, particularly E-mail and Twitter. If you are interested in my work, have questions, or want to share anything at all, feel free to reach out!
  </p>
 </div>
-<button class="collapsible"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxsnall w3-text-blue"></i>Professional Experience</button>
+<button class="collapsible"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxsnall w3-text-blue"></i>Relevant Experience</button>
 <div class="content">
     <div class="w3-container w3-card w3-white w3-margin-bottom">
       <div class = "profile">
