--- a/index.html
+++ b/index.html
@@ -299,9 +299,9 @@
     <div class="w3-container w3-card w3-white w3-margin-bottom">
       <div class = "profile">
         <div class="w3-container">
-            <h5 class="w3-opacity"><b>Mitacs Globalink Research Intern, McMaster University, Hamilton</b></h5>
+            <h5 class="w3-opacity"><b>Mitacs Globalink Research Intern</b></h5>
             <h6 class="w3-text-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>May 2023 - Aug 2023</h6>
-            <p><i class="fa fa-map-marker fa-fw w3-margin-right"></i>Hamilton, Ontario, Canada</p>
+            <p><i class="fa fa-map-marker fa-fw w3-margin-right"></i>Hamilton, Canada</p>
             <p><i class="fa fa-user fa-fw w3-margin-right"></i>Supervisor: Dr. Chi Tang</p>
             <p><i class="fa fa-flask fa-fw w3-margin-right"></i>Artificial Neural Networks, Long Term Short Memory, Hyper-paramter Optimization, Smart Grid</p>
         </div>
@@ -309,7 +309,7 @@
         <div class="w3-container">
             <h5 class="w3-opacity"><b>Machine Learning Intern, Unify AI, UK</b></h5>
             <h6 class="w3-text-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>May 2022 - Jul 2022</h6>
-            <p><i class="fa fa-map-marker fa-fw w3-margin-right"></i>London, United Kingdom (Remote)</p>
+            <p><i class="fa fa-map-marker fa-fw w3-margin-right"></i>London, UK</p>
             <p><i class="fa fa-code fa-fw w3-margin-right"></i>Helped in developing a model to enable automatic code conversions between frameworks and developed multi-framework support.</p>
         </div>
         <hr>
