--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
             <h5 class="w3-opacity"><b>Mitacs Globalink Research Intern</b></h5>
             <h6 class="w3-text-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>May 2023 - Aug 2023</h6>
             <p><i class="fa fa-map-marker fa-fw w3-margin-right"></i>Hamilton, Canada</p>
-            <p><i class="fa fa-user fa-fw w3-margin-right"></i>Supervisor: Dr. Chi Tang</p>
+            <p><i class="fa fa-user fa-fw w3-margin-right"></i>Supervisor: Dr. C. Tang</p>
             <p><i class="fa fa-flask fa-fw w3-margin-right"></i>Artificial Neural Networks, Long Term Short Memory, Hyper-paramter Optimization, Smart Grid</p>
         </div>
         <hr>
@@ -316,9 +316,9 @@
         <div class="w3-container">
             <h5 class="w3-opacity"><b>Summer Research Intern, Indian Statistical Institute, Kolkata, India</b></h5>
             <h6 class="w3-text-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jul 2021 - Sep 2021</h6>
-            <p><i class="fa fa-user fa-fw w3-margin-right"></i>Supervisor: Dr. Subhamoy Maitra</p>
-            <p><i class="fa fa-flask fa-fw w3-margin-right"></i>Quantum Algorithms, Deutsch-Josza Algorithm, Grover's Algorithm, Bernstein-Vazirani Algorithm, Quantum Fourier Transform, and Quantum Phase estimation.</p>
-            <p><i class="fa fa-book fa-fw w3-margin-right"></i>Studied HHL Algorithm, Quantum Phase estimation & Generated MUBs (Mutually Unbiased Bases)</p>
+            <p><i class="fa fa-user fa-fw w3-margin-right"></i> Supervisor: Dr. S. Maitra </p>
+            <p><i class="fa fa-flask fa-fw w3-margin-right"></i> Quantum Algorithms, Deutsch-Josza Algorithm, Grover's Algorithm, Bernstein-Vazirani Algorithm, Quantum Fourier Transform, and Quantum Phase estimation. </p>
+            <p><i class="fa fa-book fa-fw w3-margin-right"></i> Studied HHL Algorithm, Quantum Phase estimation & Generated MUBs (Mutually Unbiased Bases) </p>
             <br>
         </div>
       </div>
@@ -332,7 +332,7 @@
                     <div class="w3-container">
                       <div class = "profile">
                        <p>[Aug. 2024] I started my PhD at Georgia Institute of Technology, Atanta, USA!</p>
-                       <p>[July 2024] I completed my graduation at Indian Institute of Engineering Science and Technology Shibpur, India!</p>
+                       <p>[July 2024] I completed my graduation at Indian Institute of Engineering Science and Technology India!</p>
                        <p>[Jan 2024] My undergrad thesis got accepted as a workshop paper at IGARSS, Athens, Greece!</p>
                        <br>
                      </div>
@@ -346,8 +346,9 @@
                      <!--<h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Publications</h2> -->
                      <div class="w3-container">
                        <div class = "profile">
-                        <h3>Conference Proceedings</h3>
-                        <p>Sen, A., Chatterjee, M., & Roy, S. (2023). ExoSpikeNet: A Light Curve Analysis Based Spiking Neural Network for Exoplanet Detection.<br><a href="">[PDF]</a></p>
+                        <h5>Conference Proceedings</h5>
+                        <p>Sen, A., Chatterjee, M., & Roy, S. (2023).</p>
+                        <p> ExoSpikeNet: A Light Curve Analysis Based Spiking Neural Network for Exoplanet Detection.<br><a href="">[PDF]</a></p>
                         <p>Sen, A., Mazumder, A. R., & Sen, U. (2023). Differential Evolution Algorithm based Hyper-Parameters Selection of Transformer Neural Network Model for Load Forecasting.<br><a href="">[PDF]</a></p>
                         <p>Sen, A., Sen, U., & Roy, S. (2023). A Comparative Analysis on Metaheuristic Algorithms Based Vision Transformer Model for Early Detection of Alzheimer’s Disease.<br><a href="">[PDF]</a></p>
                         <p>Sen, A., Ghosh, A., Sarayloo, Z., Dhar, S., Jana, N., & Banerjee, A. (2023). Differential Evolution Algorithm based Hyper-Parameters Selection of Convolutional Neural Network for Speech Command Recognition.<br><a href="">[PDF]</a></p>
