--- a/index.html
+++ b/index.html
@@ -243,11 +243,11 @@
                      <h3 align="Center">Anuvab Sen</h3>
                   </div>
                   <div class="w3-container">
-                     <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-blue"></i> Docter of Philosophy (PhD) </p>
-                     <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-blue"></i> Georgia Institute of Technology, USA</p>
+                     <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-blue"></i>Docter of Philosophy [PhD]</p>
+                     <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-blue"></i>Georgia Institute of Technology, USA</p>
                      <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-blue"></i>asen74@gatech.edu</p>
-                     <p><i class="fa fa-linkedin-square fa-fw w3-margin-right w3-large w3-text-blue"></i><a href="https://www.linkedin.com/in/anuvabsen/">LinkedIn</a></p>
-                     <p><i class="fa fa-graduation-cap fa-fw w3-margin-right w3-large w3-text-blue"></i> <a href="https://scholar.google.com/citations?user=aQkZOqQAAAAJ&hl=en">Google Scholar Publications</a></p>
+                     <p><i class="fa fa-linkedin-square fa-fw w3-margin-right w3-large w3-text-blue"></i><a href="https://www.linkedin.com/in/anuvabsen/">anuvabsen</a></p>
+                     <p><i class="fa fa-graduation-cap fa-fw w3-margin-right w3-large w3-text-blue"></i><a href="https://scholar.google.com/citations?user=aQkZOqQAAAAJ&hl=en">Google Scholar</a></p>
                      <hr>
                   </div>
                </div>
@@ -256,8 +256,8 @@
                   <div class="w3-white w3-text-grey w3-card-4">
                     <h2 class="w3-text-grey w3-padding-16"><i class="fas fa-satellite-dish fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>News</h2>
                     <div class="w3-container">
-                      <p><i class="fa fa-bullhorn fa-fw w3-margin-right w3-large w3-text-teal"></i>Selected for <a href="https://sites.google.com/view/researchweek2022"> Google Research Week'22</a></p>
-                      <p><i class="fa fa-bullhorn fa-fw w3-margin-right w3-large w3-text-teal"></i>Recepient of IEEE CS Richard E Merwin Award</p>
+                      <p><i class="fa fa-bullhorn fa-fw w3-margin-right w3-large w3-text-teal"></i>Selected for <a href="https://sites.google.com/view/researchweek2022"> Google Research Week'24</a></p>
+                      <p><i class="fa fa-bullhorn fa-fw w3-margin-right w3-large w3-text-teal"></i>Recepient of IEEE GRSS Travel Grant</p>
                       <hr>
                     </div>
                   </div><br>
@@ -265,13 +265,13 @@
                   <div class="w3-white w3-text-grey w3-card-4">
                     <h2 class="w3-text-grey w3-padding-16"><i class="fas fa-satellite-dish fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Other Roles</h2>
                     <div class="w3-container">
-                      <p><i class="fa fa-bullhorn fa-fw w3-margin-right w3-large w3-text-teal"></i>Gold Microsoft Learn Student Ambassador <br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;September 2019 - Present</p>
-                      <p><i class="fa fa-bullhorn fa-fw w3-margin-right w3-large w3-text-teal"></i>Member, IEEE CIS Student Cub-Committee <br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Januray 2021 - December 2021</p>
-                      <p><i class="fa fa-bullhorn fa-fw w3-margin-right w3-large w3-text-teal"></i>Chairperson, IEEE CIS SBC - GHRCE <br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Januray 2020 - December 2020</p>
+                      <p><i class="fa fa-bullhorn fa-fw w3-margin-right w3-large w3-text-teal"></i>Member, IEEE CIS Student Committee<br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; January 2024 - Present </p>
+                      <p><i class="fa fa-bullhorn fa-fw w3-margin-right w3-large w3-text-teal"></i> Co-Lead, <a href="">Google Developers Students IIEST </a><br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  September 2022 - Feb 2024 </p>
+                      <p><i class="fa fa-bullhorn fa-fw w3-margin-right w3-large w3-text-teal"></i>Chairperson, IEEE CIS IIEST <br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Januray 2020 - December 2020</p>
                       <hr>
                     </div>
                   </div><br>
-                  
+
             </div>
             <!-- Right Column -->
             <div class="w3-twothird">
@@ -293,15 +293,15 @@
      I am very active on most socials, particularly E-mail and Twitter. If you are interested in my work, have questions, or want to share anything at all, feel free to reach out!
  </p>
 </div>
-<button class="collapsible"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxsnall w3-text-blue"></i>Relevant Experience</button>
+<button class="collapsible"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxsnall w3-text-blue"></i>Work Experience</button>
 <div class="content">
     <div class="w3-container w3-card w3-white w3-margin-bottom">
       <div class = "profile">
         <div class="w3-container">
-            <h5 class="w3-opacity"><b>Mitacs Globalink Research Intern</b></h5>
+            <h5 class="w3-opacity"><b>Mitacs Research Intern</b></h5>
             <h6 class="w3-text-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>May 2023 - Aug 2023</h6>
             <p><i class="fa fa-map-marker fa-fw w3-margin-right"></i>Hamilton, Canada</p>
-            <p><i class="fa fa-user fa-fw w3-margin-right"></i>Supervisor: Dr. C. Tang</p>
+            <p><i class="fa fa-user fa-fw w3-margin-right"></i>Supervisor: Dr. Chi Tang</p>
             <p><i class="fa fa-flask fa-fw w3-margin-right"></i>Artificial Neural Networks, Long Term Short Memory, Hyper-paramter Optimization, Smart Grid</p>
         </div>
         <hr>
