--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
                 </div>
                </div>
 
-               <button class="collapsible"> <i class="fa fa-file fa-fw w3-margin-right w3-xxsmall w3-text-blue"></i>CV_Research_Statement</button>
+               <button class="collapsible"> <i class="fa fa-file fa-fw w3-margin-right w3-xxsmall w3-text-blue"></i>CV_Research_Statements</button>
                <div class="content">
                   <div class="w3-container w3-card w3-white" id="publications" style="scroll-margin-top: 100px;">
                      <!--<h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Publications</h2> -->
@@ -401,7 +401,7 @@
       </div>
       <!-- End Page Container -->
       <footer class="w3-container w3-blue w3-center w3-margin-top">
-         <p>Copyright © Anuvab Sen 2024<br>Made with  with Colorlib.</p>
+         <p>Copyright © Anuvab Sen 2024<br>If you would like to know more about my work, then drop me an email at <a href="">asen74@gatech.edu</a></p>
       </footer>
       <script>
          var coll = document.getElementsByClassName("collapsible");
