--- a/index.html
+++ b/index.html
@@ -339,51 +339,51 @@
                 </div>
                </div>
 
-               <button class="collapsible"> <i class="fa fa-file fa-fw w3-margin-right w3-xxsmall w3-text-blue"></i>CV_Research_Statements</button>
+               <button class="collapsible"> <i class="fa fa-file fa-fw w3-margin-right w3-xxsmall w3-text-blue"></i>CV_Research_Statement</button>
                <div class="content">
                   <div class="w3-container w3-card w3-white" id="publications" style="scroll-margin-top: 100px;">
                      <!--<h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Publications</h2> -->
                      <div class="w3-container">
                        <div class = "profile">
                          <h3>CONFERENCE PAPERS</h3>
-                         <p>Sen, A., Chatterjee, M., & Roy, S. [2024].</p>
+                         <p>Sen, A., Chatterjee, M., & Roy, S.</p>
                          <p>ExoSpikeNet: A Light Curve Analysis Based Spiking Neural Network for Exoplanet Detection.<br><a href="">[PDF]</a></p>
                          <hr>
 
-                         <p>Sai, S., Sen, A., Mallick, C., Mallik, A., Roy, S. [2024].</p>
+                         <p>Sai, S., Sen, A., Mallick, C., Mallik, A., Roy, S.</p>
                          <p>QGAPHnet: Quantum Genetic Algorithm Based Hybrid QLSTM Model for Soil Moisture Estimation, IEEE International Geoscience and Remote Sensing Symposium (IGARSS 2024).<br><a href="">[PDF]</a></p>
                          <hr>
 
-                         <p>Sen, A., Sai, S., Mallick, C., Roy, S. [2024].</p>
+                         <p>Sen, A., Sai, S., Mallick, C., Roy, S.</p>
                          <p>HBO-DEViT: Vision Transformer Based Attention-Guided Evolutionary Architecture for Ship-Iceberg Categorisation in Arctic SAR Images, IEEE International Geoscience and Remote Sensing Symposium (IGARSS 2024).<br><a href="">[PDF]</a></p>
                          <hr>
 
-                         <p>Sen, A., Sutradhar, A., Paul, M., Sai, S., Mallik, A., Mallick, C. [2024].</p>
+                         <p>Sen, A., Sutradhar, A., Paul, M., Sai, S., Mallik, A., Mallick, C.</p>
                          <p>QGAPHEnsemble: Combining Hybrid QLSTM Network Ensemble via Adaptive Weighting for Short Term Weather Forecasting, IEEE World Congress on Computational Intelligence (CEC), 2024.<br><a href="">[PDF]</a></p>
                          <hr>
 
-                         <p>Sen, A., Mazumder, A. R., & Sen, U. [2023].</p>
+                         <p>Sen, A., Mazumder, A. R., & Sen, U.</p>
                          <p>Differential Evolution Algorithm based Hyper-Parameters Selection of Transformer Neural Network Model for Load Forecasting.<br><a href="">[PDF]</a></p>
                          <hr>
 
-                         <p>Sen, A., Sen, U., & Roy, S. [2023].</p>
+                         <p>Sen, A., Sen, U., & Roy, S.</p>
                          <p>A Comparative Analysis on Metaheuristic Algorithms Based Vision Transformer Model for Early Detection of Alzheimer’s Disease.<br><a href="">[PDF]</a></p>
                          <hr>
 
-                         <p>Sen, A., Ghosh, A., Sarayloo, Z., Dhar, S., Jana, N., & Banerjee, A. [2023].</p>
+                         <p>Sen, A., Ghosh, A., Sarayloo, Z., Dhar, S., Jana, N., & Banerjee, A.</p>
                          <p>Differential Evolution Algorithm based Hyper-Parameters Selection of Convolutional Neural Network for Speech Command Recognition.<br><a href="">[PDF]</a></p>
                          <hr>
 
-                         <p>Sen, A., & Roy, S. [2023].</p>
+                         <p>Sen, A., & Roy, S.</p>
                          <p>DEM-ViT: State-of-the-art Vision Transformer Model for Early Detection of Alzheimer’s Disease.<br><a href="">[PDF]</a></p>
                          <hr>
 
                          <h3>JOURNAL PAPERS</h3>
-                         <p>Sen, A., Mazumdar, A., Sen, U., Dutta, D., & Syam, P. [2023].</p>
+                         <p>Sen, A., Mazumdar, A., Sen, U., Dutta, D., & Syam, P.</p>
                          <p>Comparative Evaluation of Evolutionary Metaheuristic Algorithms for Hyper-parameter Selection in Short-Term Weather Forecasting, Springer Nature Studies in Computational Intelligence.<br><a href="">[PDF]</a></p>
                          <hr>
 
-                         <p>Mazumdar, A., Sen, A., & Sen, U. [2024].</p>
+                         <p>Mazumdar, A., Sen, A., & Sen, U.</p>
                          <p>Benchmarking Metaheuristic Integrated Quantum Approximate Optimization Algorithm against Quantum Annealing, 11th CSAI Conference, London, Quantum Information Processing (QIP) journal proceedings.<br><a href="">[PDF]</a></p>
 
 
