--- a/index.html
+++ b/index.html
@@ -298,10 +298,10 @@
     <div class="w3-container w3-card w3-white w3-margin-bottom">
       <div class = "profile">
         <div class="w3-container">
-            <h5 class="w3-opacity"><b>Mitacs Research Intern</b></h5>
+            <h5 class="w3-opacity"><b>Mitacs Globalink Intern</b></h5>
             <h6 class="w3-text-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>May 2023 - Aug 2023</h6>
             <p><i class="fa fa-map-marker fa-fw w3-margin-right"></i>Hamilton, Canada</p>
-            <p><i class="fa fa-user fa-fw w3-margin-right"></i>Supervisor: Dr. Chi Tang</p>
+            <p><i class="fa fa-user fa-fw w3-margin-right"></i>Dr. Chi Tang</p>
             <p><i class="fa fa-flask fa-fw w3-margin-right"></i>Artificial Neural Networks, Long Term Short Memory, Hyper-paramter Optimization, Smart Grid</p>
         </div>
         <hr>
@@ -315,7 +315,7 @@
         <div class="w3-container">
             <h5 class="w3-opacity"><b>Summer Research Intern, Indian Statistical Institute, Kolkata, India</b></h5>
             <h6 class="w3-text-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jul 2021 - Sep 2021</h6>
-            <p><i class="fa fa-user fa-fw w3-margin-right"></i> Supervisor: Dr. S. Maitra </p>
+            <p><i class="fa fa-user fa-fw w3-margin-right"></i>Dr. S. Maitra </p>
             <p><i class="fa fa-flask fa-fw w3-margin-right"></i> Quantum Algorithms, Deutsch-Josza Algorithm, Grover's Algorithm, Bernstein-Vazirani Algorithm, Quantum Fourier Transform, and Quantum Phase estimation. </p>
             <p><i class="fa fa-book fa-fw w3-margin-right"></i> Studied HHL Algorithm, Quantum Phase estimation & Generated MUBs (Mutually Unbiased Bases) </p>
             <br>
@@ -339,7 +339,7 @@
                 </div>
                </div>
 
-               <button class="collapsible"> <i class="fa fa-file fa-fw w3-margin-right w3-xxsmall w3-text-blue"></i>CV_Research_Statement</button>
+               <button class="collapsible"> <i class="fa fa-file fa-fw w3-margin-right w3-xxsmall w3-text-blue"></i>CV</button>
                <div class="content">
                   <div class="w3-container w3-card w3-white" id="publications" style="scroll-margin-top: 100px;">
                      <!--<h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Publications</h2> -->
@@ -347,35 +347,35 @@
                        <div class = "profile">
                          <h3>CONFERENCE PAPERS</h3>
                          <p>Sen, A., Chatterjee, M., & Roy, S.</p>
-                         <p>ExoSpikeNet: A Light Curve Analysis Based Spiking Neural Network for Exoplanet Detection.<br><a href="">[PDF]</a></p>
+                         <p>ExoSpikeNet: A Light Curve Analysis Based Spiking Neural Network for Exoplanet Detection, Comm. Systems and Network Technologies Conf [CSNT], 802-807<br><a href="">[PDF]</a></p>
                          <hr>
 
                          <p>Sai, S., Sen, A., Mallick, C., Mallik, A., Roy, S.</p>
-                         <p>QGAPHnet: Quantum Genetic Algorithm Based Hybrid QLSTM Model for Soil Moisture Estimation, IEEE International Geoscience and Remote Sensing Symposium (IGARSS 2024).<br><a href="">[PDF]</a></p>
+                         <p>QGAPHnet: Quantum Genetic Algorithm Based Hybrid QLSTM Model for Soil Moisture Estimation, IEEE International Geoscience and Remote Sensing Symposium [IGARSS 2024].<br><a href="">[PDF]</a></p>
                          <hr>
 
                          <p>Sen, A., Sai, S., Mallick, C., Roy, S.</p>
-                         <p>HBO-DEViT: Vision Transformer Based Attention-Guided Evolutionary Architecture for Ship-Iceberg Categorisation in Arctic SAR Images, IEEE International Geoscience and Remote Sensing Symposium (IGARSS 2024).<br><a href="">[PDF]</a></p>
+                         <p>HBO-DEViT: Vision Transformer Based Attention-Guided Evolutionary Architecture for Ship-Iceberg Categorisation in Arctic SAR Images, IEEE International Geoscience and Remote Sensing Symposium [IGARSS 2024].<br><a href="">[PDF]</a></p>
                          <hr>
 
                          <p>Sen, A., Sutradhar, A., Paul, M., Sai, S., Mallik, A., Mallick, C.</p>
-                         <p>QGAPHEnsemble: Combining Hybrid QLSTM Network Ensemble via Adaptive Weighting for Short Term Weather Forecasting, IEEE World Congress on Computational Intelligence (CEC), 2024.<br><a href="">[PDF]</a></p>
+                         <p>QGAPHEnsemble: Combining Hybrid QLSTM Network Ensemble via Adaptive Weighting for Short Term Weather Forecasting, IEEE World Congress on Computational Intelligence [CEC], 2024.<br><a href="">[PDF]</a></p>
                          <hr>
 
                          <p>Sen, A., Mazumder, A. R., & Sen, U.</p>
-                         <p>Differential Evolution Algorithm based Hyper-Parameters Selection of Transformer Neural Network Model for Load Forecasting.<br><a href="">[PDF]</a></p>
+                         <p>Differential Evolution Algorithm based Hyper-Parameters Selection of Transformer Neural Network Model for Load Forecasting,Symposium Series on Computational Intelligence (SSCI), 234-239<br><a href="">[PDF]</a></p>
                          <hr>
 
                          <p>Sen, A., Sen, U., & Roy, S.</p>
-                         <p>A Comparative Analysis on Metaheuristic Algorithms Based Vision Transformer Model for Early Detection of Alzheimer’s Disease.<br><a href="">[PDF]</a></p>
+                         <p>A Comparative Analysis on Metaheuristic Algorithms Based Vision Transformer Model for Early Detection of Alzheimer’s Disease,Computational Intelligence and Communication Networks [CICN], 200-205<br><a href="">[PDF]</a></p>
                          <hr>
 
                          <p>Sen, A., Ghosh, A., Sarayloo, Z., Dhar, S., Jana, N., & Banerjee, A.</p>
-                         <p>Differential Evolution Algorithm based Hyper-Parameters Selection of Convolutional Neural Network for Speech Command Recognition.<br><a href="">[PDF]</a></p>
+                         <p>Differential Evolution Algorithm based Hyper-Parameters Selection of Convolutional Neural Network for Speech Command Recognition, Computational Intelligence - ECTA, Vol 1<br><a href="">[PDF]</a></p>
                          <hr>
 
                          <p>Sen, A., & Roy, S.</p>
-                         <p>DEM-ViT: State-of-the-art Vision Transformer Model for Early Detection of Alzheimer’s Disease.<br><a href="">[PDF]</a></p>
+                         <p>DEM-ViT: State-of-the-art Vision Transformer Model for Early Detection of Alzheimer’s Disease, National Conference on Communications [NCC], 1-6<br><a href="">[PDF]</a></p>
                          <hr>
 
                          <h3>JOURNAL PAPERS</h3>
@@ -384,7 +384,7 @@
                          <hr>
 
                          <p>Mazumdar, A., Sen, A., & Sen, U.</p>
-                         <p>Benchmarking Metaheuristic Integrated Quantum Approximate Optimization Algorithm against Quantum Annealing, 11th CSAI Conference, London, Quantum Information Processing (QIP) journal proceedings.<br><a href="">[PDF]</a></p>
+                         <p>Benchmarking Metaheuristic Integrated Quantum Approximate Optimization Algorithm against Quantum Annealing, 11th CSAI Conference, London, Quantum Information Processing [QIP].<br><a href="">[PDF]</a></p>
 
 
 
