--- a/index.html
+++ b/index.html
@@ -345,13 +345,13 @@
                      <!--<h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Publications</h2> -->
                      <div class="w3-container">
                        <div class = "profile">
-                         <h3>CONFERENCE PAPERS</h3>
+                         <h3>CONFERENCE PAPER</h3>
                          <p>Sen, A., Chatterjee, M., & Roy, S.</p>
                          <p>ExoSpikeNet: A Light Curve Analysis Based Spiking Neural Network for Exoplanet Detection, Comm. Systems and Network Technologies Conf [CSNT], 802-807<br><a href="">[PDF]</a></p>
                          <hr>
 
                          <p>Sai, S., Sen, A., Mallick, C., Mallik, A., Roy, S.</p>
-                         <p>QGAPHnet: Quantum Genetic Algorithm Based Hybrid QLSTM Model for Soil Moisture Estimation, IEEE International Geoscience and Remote Sensing Symposium [IGARSS 2024].<br><a href="">[PDF]</a></p>
+                         <p>QGAPHnet: Quantum Genetic Algorithm Based Hybrid QLSTM Model for Soil Moisture Estimation, Geoscience and Remote Sensing Symposium [IGARSS 2024].<br><a href="">[PDF]</a></p>
                          <hr>
 
                          <p>Sen, A., Sai, S., Mallick, C., Roy, S.</p>
@@ -363,11 +363,11 @@
                          <hr>
 
                          <p>Sen, A., Mazumder, A. R., & Sen, U.</p>
-                         <p>Differential Evolution Algorithm based Hyper-Parameters Selection of Transformer Neural Network Model for Load Forecasting,Symposium Series on Computational Intelligence (SSCI), 234-239<br><a href="">[PDF]</a></p>
+                         <p>Differential Evolution Algorithm based Hyper-Parameters Selection of Transformer Neural Network Model for Load Forecasting, Symposium Series on Computational Intelligence [SSCI], 234-239<br><a href="">[PDF]</a></p>
                          <hr>
 
                          <p>Sen, A., Sen, U., & Roy, S.</p>
-                         <p>A Comparative Analysis on Metaheuristic Algorithms Based Vision Transformer Model for Early Detection of Alzheimer’s Disease,Computational Intelligence and Communication Networks [CICN], 200-205<br><a href="">[PDF]</a></p>
+                         <p>A Comparative Analysis on Metaheuristic Algorithms Based Vision Transformer Model for Early Detection of Alzheimer’s Disease, Computational Intelligence and Communication Networks [CICN], 200-205<br><a href="">[PDF]</a></p>
                          <hr>
 
                          <p>Sen, A., Ghosh, A., Sarayloo, Z., Dhar, S., Jana, N., & Banerjee, A.</p>
@@ -375,10 +375,10 @@
                          <hr>
 
                          <p>Sen, A., & Roy, S.</p>
-                         <p>DEM-ViT: State-of-the-art Vision Transformer Model for Early Detection of Alzheimer’s Disease, National Conference on Communications [NCC], 1-6<br><a href="">[PDF]</a></p>
+                         <p>DEM-ViT: State-of-the-art Vision Transformer Model for Early Detection of Alzheimer’s Disease , National Conference on Communications [NCC], 1-6<br><a href="">[PDF]</a></p>
                          <hr>
 
-                         <h3>JOURNAL PAPERS</h3>
+                         <h3>JOURNAL PAPER</h3>
                          <p>Sen, A., Mazumdar, A., Sen, U., Dutta, D., & Syam, P.</p>
                          <p>Comparative Evaluation of Evolutionary Metaheuristic Algorithms for Hyper-parameter Selection in Short-Term Weather Forecasting, Springer Nature Studies in Computational Intelligence.<br><a href="">[PDF]</a></p>
                          <hr>
