--- a/index.html
+++ b/index.html
@@ -345,46 +345,46 @@
                      <!--<h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Publications</h2> -->
                      <div class="w3-container">
                        <div class = "profile">
-                         <h3>CONFERENCE PAPER</h3>
+                         <h3>CONFERENCES</h3>
                          <p>Sen, A., Chatterjee, M., & Roy, S.</p>
                          <p>ExoSpikeNet: A Light Curve Analysis Based Spiking Neural Network for Exoplanet Detection, Comm. Systems and Network Technologies Conf [CSNT], 802-807<br><a href="">[PDF]</a></p>
-                         <hr>
+
 
                          <p>Sai, S., Sen, A., Mallick, C., Mallik, A., Roy, S.</p>
                          <p>QGAPHnet: Quantum Genetic Algorithm Based Hybrid QLSTM Model for Soil Moisture Estimation, Geoscience and Remote Sensing Symposium [IGARSS 2024].<br><a href="">[PDF]</a></p>
-                         <hr>
+
 
                          <p>Sen, A., Sai, S., Mallick, C., Roy, S.</p>
                          <p>HBO-DEViT: Vision Transformer Based Attention-Guided Evolutionary Architecture for Ship-Iceberg Categorisation in Arctic SAR Images, IEEE International Geoscience and Remote Sensing Symposium [IGARSS 2024].<br><a href="">[PDF]</a></p>
-                         <hr>
+
 
                          <p>Sen, A., Sutradhar, A., Paul, M., Sai, S., Mallik, A., Mallick, C.</p>
                          <p>QGAPHEnsemble: Combining Hybrid QLSTM Network Ensemble via Adaptive Weighting for Short Term Weather Forecasting, IEEE World Congress on Computational Intelligence [CEC], 2024.<br><a href="">[PDF]</a></p>
-                         <hr>
+
 
                          <p>Sen, A., Mazumder, A. R., & Sen, U.</p>
                          <p>Differential Evolution Algorithm based Hyper-Parameters Selection of Transformer Neural Network Model for Load Forecasting, Symposium Series on Computational Intelligence [SSCI], 234-239<br><a href="">[PDF]</a></p>
-                         <hr>
+
 
                          <p>Sen, A., Sen, U., & Roy, S.</p>
                          <p>A Comparative Analysis on Metaheuristic Algorithms Based Vision Transformer Model for Early Detection of Alzheimer’s Disease, Computational Intelligence and Communication Networks [CICN], 200-205<br><a href="">[PDF]</a></p>
-                         <hr>
+
 
                          <p>Sen, A., Ghosh, A., Sarayloo, Z., Dhar, S., Jana, N., & Banerjee, A.</p>
                          <p>Differential Evolution Algorithm based Hyper-Parameters Selection of Convolutional Neural Network for Speech Command Recognition, Computational Intelligence - ECTA, Vol 1<br><a href="">[PDF]</a></p>
-                         <hr>
+
 
                          <p>Sen, A., & Roy, S.</p>
                          <p>DEM-ViT: State-of-the-art Vision Transformer Model for Early Detection of Alzheimer’s Disease , National Conference on Communications [NCC], 1-6<br><a href="">[PDF]</a></p>
                          <hr>
 
-                         <h3>JOURNAL PAPER</h3>
+                         <h3>JOURNALS</h3>
                          <p>Sen, A., Mazumdar, A., Sen, U., Dutta, D., & Syam, P.</p>
                          <p>Comparative Evaluation of Evolutionary Metaheuristic Algorithms for Hyper-parameter Selection in Short-Term Weather Forecasting, Springer Nature Studies in Computational Intelligence.<br><a href="">[PDF]</a></p>
-                         <hr>
+
 
                          <p>Mazumdar, A., Sen, A., & Sen, U.</p>
-                         <p>Benchmarking Metaheuristic Integrated Quantum Approximate Optimization Algorithm against Quantum Annealing, 11th CSAI Conference, London, Quantum Information Processing [QIP].<br><a href="">[PDF]</a></p>
+                         <p> Benchmarking Metaheuristic Integrated Quantum Approximate Optimization Algorithm against Quantum Annealing, 11th CSAI Conference, London, Quantum Information Processing [QIP]. <br><a href="">[PDF]</a></p>
 
 
 
